[gd_scene load_steps=11 format=2]

[ext_resource path="res://resources/ButtonNoBG.tres" type="Theme" id=1]
[ext_resource path="res://fonts/ResourcesTheme.tres" type="Theme" id=2]
[ext_resource path="res://sprites/Icons/64x64px/wildberry.png" type="Texture" id=3]
[ext_resource path="res://sprites/BG/9rectPanel.png" type="Texture" id=4]
[ext_resource path="res://scripts/FoodItem.gd" type="Script" id=5]
[ext_resource path="res://fonts/SourceSerifPro-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://sprites/Icons/64x64px/food.png" type="Texture" id=7]
[ext_resource path="res://sprites/Icons/32x32px/Wenrexa Drop Water or Blood.png" type="Texture" id=8]
[ext_resource path="res://sprites/Icons/32x32px/virus.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 6 )

[node name="FoodItem" type="Control"]
margin_right = 192.0
margin_bottom = 128.0
rect_min_size = Vector2( 320, 160 )
theme = ExtResource( 2 )
script = ExtResource( 5 )

[node name="BG" type="NinePatchRect" parent="."]
self_modulate = Color( 1, 0.486275, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -69.0
margin_right = 152.0
margin_bottom = 85.0
rect_min_size = Vector2( 304, 0 )
custom_constants/separation = 0

[node name="Icon" type="TextureRect" parent="VBoxContainer"]
margin_right = 304.0
margin_bottom = 64.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 304.0
margin_bottom = 105.0
text = "WildBerry"
align = 1
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 105.0
margin_right = 304.0
margin_bottom = 105.0
alignment = 1

[node name="Food" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 96.0
rect_min_size = Vector2( 64, 0 )

[node name="CaloriesAmm" type="Label" parent="VBoxContainer/HBoxContainer/Food"]
unique_name_in_owner = true
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 0 )
size_flags_stretch_ratio = 2.0
custom_fonts/font = SubResource( 1 )
text = "24"
align = 2
valign = 1
clip_text = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/Food"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 1

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 116.0
rect_min_size = Vector2( 16, 0 )

[node name="Water" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 184.0
rect_min_size = Vector2( 64, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="WaterAmm" type="Label" parent="VBoxContainer/HBoxContainer/Water"]
unique_name_in_owner = true
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 0 )
custom_fonts/font = SubResource( 1 )
text = "8"
align = 2
valign = 1
clip_text = true

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer/Water"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_bottom = 32.0
rect_min_size = Vector2( 24, 32 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="Control2" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 188.0
margin_right = 204.0
rect_min_size = Vector2( 16, 0 )

[node name="Sick" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 208.0
margin_right = 272.0
rect_min_size = Vector2( 64, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="SickAmm" type="Label" parent="VBoxContainer/HBoxContainer/Sick"]
unique_name_in_owner = true
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 0 )
custom_fonts/font = SubResource( 1 )
text = "8"
align = 2
valign = 1
clip_text = true

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/HBoxContainer/Sick"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_bottom = 32.0
rect_min_size = Vector2( 24, 32 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
